# useful_snippets

./: .gitignore  LICENSE  Makefile  README.md
awk/: makefile_autodoc.awk
python/: pyproject.toml
python/example_cli/: cli_app.py
python/tutorials/: multiple_inheritance.ipynb
