[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_pyproject_cli"
version = "0.0.1"
authors = [
  { name="ncrav", email="example@example.example" },
]
description = "An example example_pyproject"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "typer==0.12.0"
]

[tool.hatch.build.targets.wheel]
packages = ["example_cli/"]

[project.scripts]
example_cli = "example_cli.cli_app:example_app"

